# godot_resource_parser

./: .gitignore  Cargo.toml  README.md  project.json
godot_data/: Cargo.toml
godot_data/src/: godot_file.rs  lib.rs  project_file.rs  tscn_file.rs  values.rs
godot_macros/: Cargo.toml
godot_macros/src/: lib.rs
godot_parser_cli/: Cargo.toml
godot_parser_cli/src/: main.rs
godot_parser_library/: Cargo.toml
godot_parser_library/src/: godot_parser.rs  lib.rs  project_parser.rs  tscn_parser.rs  tscn_tres_parser.rs
godot_parser_library/src/data/: values.rs
